--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -7,13 +7,13 @@ spring:
         - name: LogFilter
       routes:
         - id: subscriptionRoute
-          uri: lb://SUBSCRIPTION-SERVICE
+          uri: lb://subscription-service
           predicates:
             - Path=/subscription/**
           filters:
             - name: SubscriptionFilter
         - id: courseRoute
-          uri: lb://COURSE-SERVICE
+          uri: lb://course-service
           predicates:
             - Path=/course/**
           filters:
